# fsweep

./: CHANGELOG.md  README.md  SECURITY.md  index.html  prek.toml  pyproject.toml  zensical.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml  release.yml
docs/: advanced.md  configuration.md  contributing.md  features.md  index.md  installation.md  license.md  markdown.md  safety.md  support.md  usage.md
src/fsweep/: __init__.py  __main__.py  cli.py  config.py
tests/: test_ci_config.py
tests/test_fsweep/: __init__.py  test_benchmark.py  test_cli.py  test_config.py  test_engine.py
