[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsweep"
version = "0.1.0"
description = "An advanced workspace cleanup tool for developers to reclaim disk space."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[project.scripts]
fsweep = "fsweep.cli:app"
