[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsweep"
version = "0.1.0"
description = "An advanced workspace cleanup tool for developers to reclaim disk space."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
fsweep = "fsweep.cli:app"

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.ruff.lint]
select = [
    # flake8-annotations
    "ANN",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # Pylint
    "PL",
    # pycodestyle error
    "E",
    # pycodestyle warning
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = [
    "src",
    "tests",
]

[tool.ty.environment]
python = ".venv"
