[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsweep"
version = "0.3.0"
description = "An advanced workspace cleanup tool for developers to reclaim disk space."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.2",
    "tomli>=2.3.0; python_version < '3.11'",
    "typer>=0.21.1",
]

[project.scripts]
fsweep = "fsweep.cli:app"

[dependency-groups]
dev = [
    "git-cliff>=2.12.0",
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "zensical>=0.0.23",
]

[tool.ruff.lint]
select = [
    # flake8-annotations
    "ANN",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # Pylint
    "PL",
    # pycodestyle error
    "E",
    # pycodestyle warning
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.rumdl.MD013]
code_blocks = false

[tool.rumdl.per-file-ignores]
".github/pull_request_template.md" = ["MD041"]  # first-line-h1
"CHANGELOG.md" = ["MD041"]  # first-line-h1

[tool.ty.src]
include = [
    "src",
    "tests",
]

[tool.ty.environment]
python = ".venv"

[tool.git-cliff.changelog]
# A Tera template to be rendered as the changelog's header.
# See https://keats.github.io/tera/docs/#introduction
header = """
# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
# A Tera template to be rendered for each release in the changelog.
# See https://keats.github.io/tera/docs/#introduction
body = """
{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
    {% endfor %}
{% endfor %}\n
"""
# A Tera template to be rendered as the changelog's footer.
# See https://keats.github.io/tera/docs/#introduction
footer = """
{% for release in releases -%}
    {% if release.version -%}
        {% if release.previous.version -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
                    /compare/{{ release.previous.version }}..{{ release.version }}
        {% else -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
                    /tree/{{ release.version }}
        {% endif -%}
    {% else -%}
        [unreleased]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
            /compare/{{ release.previous.version }}..HEAD
    {% endif -%}
{% endfor %}
<!-- generated by git-cliff -->
"""
# Remove leading and trailing whitespaces from the changelog's body.
trim = true

[tool.git-cliff.git]
# Parse commits according to the conventional commits specification.
# See https://www.conventionalcommits.org
conventional_commits = true
# Exclude commits that do not match the conventional commits specification.
filter_unconventional = false
# An array of regex based parsers for extracting data from the commit message.
# Assigns commits to groups.
# Optionally sets the commit's scope and can decide to exclude commits from further processing.
commit_parsers = [
    { message = "^[a|A]dd", group = "Added" },
    { message = "^[s|S]upport", group = "Added" },
    { message = "^[r|R]emove", group = "Removed" },
    { message = "^.*: add", group = "Added" },
    { message = "^.*: support", group = "Added" },
    { message = "^.*: remove", group = "Removed" },
    { message = "^.*: delete", group = "Removed" },
    { message = "^test", group = "Fixed" },
    { message = "^fix", group = "Fixed" },
    { message = "^.*: fix", group = "Fixed" },
    { message = "^.*", group = "Changed" },
]
# Prevent commits that are breaking from being excluded by commit parsers.
filter_commits = false
# Order releases topologically instead of chronologically.
topo_order = false
# Order of commits in each group/release within the changelog.
# Allowed values: newest, oldest
sort_commits = "oldest"
